--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ a {
     text-decoration: none;
     padding: 20px;
     border-radius: 10px;
+    color: white;
 }
 
 .container {
@@ -154,6 +155,81 @@ text-align: left;
     }
   }
 
+  .pricing-section {
+    display: flex; 
+    justify-content: flex-start;
+    align-items: center;
+    margin: 30px auto;
+    flex-direction: column;
+  }
+
+  h2 {
+    font-size: 30px;
+  }
+
+
+  .pricing-list {
+    display: flex;
+    gap: 10%;
+    justify-content: center;
+    text-align: center;
+    border: 0px solid;
+    margin: 10px;
+    font-size: 25px;
+    font-weight: 400;
+    padding-left: 0px;
+    width: 1000px;
+  }
+
+  .pricing-list > li {
+ flex-shrink: 0;
+ border: 1px solid;
+ padding: 30px;
+ border-radius: 30px;
+  }
+
+
+.quote-section  {
+    padding: 0 16px;
+    border: #111;
+    border-radius: 1px solid #0000;
+    background-color: #fe707b;
+    padding: 40px;
+}
 
 
 
+
+.quote-p {
+    font-size: 24px;
+    font-family: "Roboto Serif", serif;
+    font-optical-sizing: auto;
+        font-style: normal;
+        line-height: 1.5;
+}
+
+.quote-p-signature {
+    font-weight:bold;
+    font-size:23px;
+    text-align: right;
+    padding:0;
+    line-height:1.5;
+    padding-right: 16px;
+}
+
+
+  
+
+
+
+
+
+  .footer-section {
+    background-color: #860122;
+    color: #ffffff;
+    text-align: center;
+    padding: 15px;
+    font-size: 24px;
+    border-radius: 30px;
+    margin-top: 20px;
+  }
